# f3

./: .gitignore  Cargo.toml  openocd.cfg  openocd.gdb
.cargo/: config
examples/: blinky.rs  hello.rs  i3g4250d.rs  itm.rs  leds.rs  log-sensors.rs  lsm303agr.rs  lsm303dlhc.rs  madgwick.rs  roulette.rs  serial-echo.rs  serial.rs
src/: led.rs  lib.rs
src/examples/: _07_i3g4250d.rs  mod.rs
