[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Suzuki Keiji"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the STM32F3DISCOVERY rev.6"
documentation = "https://docs.rs/f3_r6"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "f3_r6"
repository = "https://github.com/zuki/f3_r6"
version = "0.1.0"

[dependencies.i3g4250d]
version = "0.1.0"
path = "../i3g4250d"

[dependencies.lsm303agr]
version = "0.1.0"
path = "../lsm303agr"

[dependencies.stm32f3xx-hal]
verion = "0.5.0"
features = ["stm32f303xc"]

[dev-dependencies]
aligned = "0.3.4"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
madgwick = "0.1.1"
panic-semihosting = "0.5.3"

[dev-dependencies.byteorder]
default-features = false
version = "1.3.4"

[dev-dependencies.cast]
default-features = false
version = "0.2.3"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.nb]
version = "1.0.0"

[dev-dependencies.stm32f3xx-hal]
version = "0.5.0"
features = ["rt"]

[features]
rt = ["stm32f3xx-hal/rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
